# zet-live

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  Dockerfile  justfile
.github/workflows/: deploy.yaml
backend/: AGENTS.md  Cargo.toml  build.rs  justfile
backend/.sqlx/: query-02fedb14fae9961005f4093f446452b5c6ffc3bedaf52d37b6cb9eea58d19ad1.json  query-0465e5ebda979d470a528dbc08b03b8ad767dd795d11e81ed5d61b57e5110cdc.json  query-051b87e77bf203eff497e11fddbf548bc8f17d32a28104d13a2ce27ca34d16a3.json  query-06742f128e84065b6069c63251cfcc7b9621d51ee6b9f4fc4fb83e98e7770ce0.json  query-09768b964845c9837a6f769c81e73b4a20d53abd83f653c2f2c6b84be4a40448.json  query-0a0255684e85449a753294e54d78be15d281a158c8f262d1b24d8b1a4a8b9466.json  query-0d955201108b8999b5eb9be2de14497cd4e378dc95b7dae4983668a45cabf88a.json  query-11f356522a7847e35388ed713bb5e0e0fb65f05cd0a568ffc4c48e1865f7b92b.json  query-12f1613f1d43eacf9ba93728564ce553e7e9377d7faa629ed2f310db91229dfd.json  query-17262a2ee2cd6e9cba6af27f2b5853144e2216e420170abc5a4a64d9026cf2cc.json  query-17be6b0bc463e0ba98d8465ba21ae36f28633ecaa368a6270e0af3836d18ea14.json  query-1ec00439bd6fa93948c0835d7bfb135ec2c43174461196e5e73a5164e53a0f13.json  query-1f106c5ad93f960a62cb9a9d4692081d2fc36069831ad9f99459df7d5d1ea130.json  query-22747ba3e1bb5fe0aa95e967539f5ac834a4d7204ebb63ba142806004032cc55.json  query-261b84ad2093bf0facc518ccd217a057a2f4ad188aaf70f0a60569c69c163374.json  query-287a4dcd5de3f4ef50e6f6b52d5ffd7a14769dd951ac3681f9d45a336ead7378.json  query-29e13e5f0dc98e5e6eb2bd253184e255b7ea6dbf70cd7ac5b0e7eb985c4cbcc9.json  query-29f98bdf4105013c0fb5e453a93d765123b8d14be5ef94043d09415c3fb6973f.json  query-2cdecf1ec7d8d33f6a7c37ab42181ba8e5ad02f535becff68cac7360623b1076.json  query-321f22d8fd8b1f8a9f552c81929fb7a41b7756f374d998a1d91dd96f5762cf72.json  query-32b1b04f48778d37b68052cf10c525a2d8e6aa70f7edf8c02dac2416308c1080.json  query-3654d42952b72ec46801487681b5ff4fbd5073b5e308eed3fcbf2e6e8527df1f.json  query-368f63cf77594338f95e2f3e7c8fed0a310c267ab9495f6259334a7806fe6168.json  query-3767a589042c5ca390081674a8433efca3e2c55d095e1b4d08a684835ae68fbb.json  query-39a3ff02a6d962be47dd727d255e7fd4529f522f18b92300425fa4098d3b0df6.json  query-3bf318841041b6de81f3d562756cc143e1ad84f69fdc01a0b329588dd6b30ced.json  query-3f73388b5706afe971c20fe5d0e38b766d2f965426d0c1ce3f37d62e2329a058.json  query-401353ae8bf284b3642f4c7d45fa06592e1e50dfaccd802eeaec1abe2790524f.json  query-40ec88cddff6a1ef0d188efb58adf3b7e1d41a9df7eaaa464c06171679aff737.json  query-415be9b039159db128ef722ec5b5b1e601e2a57491741dfe044c57dd1c377580.json  query-41cad99c1cf97a2636f11707bc4093cbcfe859929b3f7a414555d2640ade94fb.json  query-428f8044031182fbbda99326efdd6956706340e8edea545548fce497e15491aa.json  query-42b8f10b557983eb043fcd91b9ebce1b544e1a746e96585332ea7b1affdf17e9.json  query-43696577eac37fcb86c287810862eeee61e155874e8d023055b935df58c2d345.json  query-4440074f563a284f6e7c56eabc98cc8825d537c842cd75968d111f3872430ff7.json  query-48b188d6ecda1538f8fe42ffb0f422677ec15fccea0f1091524dda0267498dd7.json  query-4ca5e8c83e42231cfaf5ab30b62608ac219d403359381dce24768f20cccdb961.json  query-4f4d0d39065c79d7120d411aab5cfcf1de005c373352fb0c73727ffa58a5a0d2.json  query-50f8c079a68d746c9a4de6c7b533ba9696a4bdf375abfc2b1b321c305d3d2778.json  query-53e6fa540427706533546649db037375f18c582f1c109d69c81e11df1f3cfa7d.json  (+88 more)
backend/migrations/: 20260605172220_init.up.sql  20260610234142_add_admin_settings.down.sql  20260610234142_add_admin_settings.up.sql  20260616180000_gbfs.down.sql  20260616180000_gbfs.up.sql  20260617120000_add_feedback.up.sql  20260623170000_user_accounts.down.sql  20260623170000_user_accounts.up.sql
backend/src/: http_client.rs  logger.rs  main.rs
backend/src/admin/: feedback.rs  metadata.rs  mod.rs  router.rs  settings.rs  static_assets.rs  user_notices.rs
backend/src/admin/html/: index.html
backend/src/auth/: accounts.rs  config.rs  mod.rs  oauth.rs  session.rs
backend/src/cli/: mod.rs
backend/src/config/: project.rs
backend/src/database/: mod.rs  sqlx_types.rs
backend/src/database/migrations/: 1744173525_init.sql  1753380260_add-realtime-tables.sql  1779127818_add-vehicle-tracking.sql  1779409011_add-next-stop-columns.sql  1779411197_add-next-stop-arrival-time.sql  1779449352_add-live-trip-stop-times.sql  1779530000_precomputed-schedule-columns.sql  1779702974_add-bearing.sql  1779800000_add-live-vehicles-route-long-name.sql  1779900000_add-live-vehicles-trip-headsign.sql
backend/src/entity/util/: mixed_value.rs  mod.rs  versioned.rs
backend/src/proto/: mod.rs
backend/src/proto/gbfs/: discovery.rs  fetcher.rs  mod.rs
backend/src/proto/gbfs/data/: free_bike_status.rs  mod.rs  station_information.rs  station_status.rs  system_hours.rs  system_information.rs  system_pricing_plans.rs  system_regions.rs  vehicle_types.rs
backend/src/proto/gtfs_realtime/: data.rs  fetcher.rs
backend/src/proto/gtfs_schedule/: fetcher.rs
backend/src/proto/gtfs_schedule/data/: mod.rs  route.rs  shape.rs  stop.rs  stop_time.rs  trip.rs
backend/src/server/: error.rs  mod.rs
backend/src/server/request/: json_or_accept.rs  mod.rs
backend/src/server/routes/: mod.rs
backend/src/server/routes/frontend/: mod.rs
backend/src/server/routes/v1/: admin_notifications.rs  capabilities.rs  mod.rs  settings.rs
backend/src/server/routes/v1/_entity/: gbfs.rs  mod.rs  vehicle.rs
backend/src/server/routes/v1/app/: mod.rs
backend/src/server/routes/v1/auth/: mod.rs
backend/src/server/routes/v1/feed/: mod.rs
backend/src/server/routes/v1/feedback/: mod.rs
backend/src/server/routes/v1/gbfs/: mod.rs
backend/src/server/routes/v1/schedule/: mod.rs  predictions.rs
backend/src/server/routes/v1/vehicles/: mod.rs
backend/src/server/routes/v1/ws/: mod.rs
backend/src/server/routes/well_known/: mod.rs
frontend/: AGENTS.md  CODE-REVIEW.md  README.md  astro.config.mjs  eslint.config.mjs  index.html  justfile  package.json  tsconfig.json  vite.config.ts
frontend-admin/: .prettierrc  AGENTS.md  README.md  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts
(+113 files in other folders)
