[package]
name = "zet-live"
version = "0.2.1"
edition = "2024"

[dependencies]
accept-header = "0.2.3"
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros", "ws"] }
axum-client-ip = "1.3.1"
axum-extra = { version = "0.12.6", features = ["query"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6.5"
csv = "1.4.0"
dotenvy = "0.15.7"
futures = "0.3.32"
include_dir = { version = "0.7.4", features = ["metadata"] }
jiff = { version = "0.2.28", features = ["serde"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "macros"] }
listenfd = "1.0.2"
mime = "0.3.17"
minicbor-serde = { version = "0.7.0", features = ["full"] }
prost = { version = "0.14.4" }
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["json", "deflate", "gzip", "brotli", "rustls", "hickory-dns", "cookies", "stream", "multipart"] }
serde = { version = "1.0.219", features = ["alloc", "derive"] }
serde_json = { version = "1.0.150", features = ["alloc"] }
serde_repr = "0.1.20"
signal-hook = "0.4.4"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["full"] }
tower-serve-static = { version = "0.1.2", features = ["metadata"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["parking_lot", "env-filter", "json"] }
ulid = "1.2.1"
url = { version = "2.5.8", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
webpki-root-certs = "1.0.7"
build-info = "0.0.44"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
uninlined_format_args = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
cognitive_complexity = "allow"
unnecessary_debug_formatting = "allow"
default_trait_access = "allow"

[profile.release]
strip = true
opt-level = "z"
lto = "thin"
# panic = "abort"
codegen-units = 1

[build-dependencies]
prost-build = "0.14.4"
build-info-build = "0.0.44"
